<resources>

    <string name="app_name">Economy Handler</string>
    <string name="temp_string">TODO: ADD COMMERCIALS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>

    <string name="monthly_expenditures">Monthly expenditures</string>
    <string name="income">Income</string>
    <string name="expenditure">Expenditure</string>
    <string name="scanner">Scan QR</string>
    <string name="scanner_cancelled">Scanner canceled</string>
    <string name="scanner_ok">Scenned: </string>
    <string name="scanner_value">Item registered as:</string>
    <string name="scanner_not_found">Item not found, add data manually</string>

    <!-- Sharedpreferences keys-->
    <string name="ECONOMYHANDLER_USER_DATA">SP_USER_DATA</string>
    <string name="USER_EMAIL">USER_EMAIL</string>
    <string name="USER_PASSWORD">USER_PASSWORD</string>
    <string name="USER_FIRST_NAME">USER_FIRST_NAME</string>
    <string name="USER_SURNAME">USER_SURNAME</string>
    <string name="USER_IS_LOGGEDIN">USER_IS_LOGGEDIN</string>

    <!-- Fragment titles-->
    <string name="fragment_home">Home</string>
    <string name="fragment_add_income_expenditure">Add income / Expenditure</string>

    <string name="fragment_incomes">Incomes</string>
    <string name="fragment_expenditures">Expenditures</string>
    <string name="fragment_register">Register</string>
    <string name="fragment_login">Login</string>
    <string name="fragment_logout">Log out</string>

    <string name="ARG_FRAGMENT_NUMBER">fragment_number</string>
    <string name="ARG_FRAGMENT_TITLE">fragment_title</string>

    <!-- EditText Strings -->
    <string name="register_email">E-mail</string>
    <string name="register_password">Password</string>
    <string name="register_password_repeat">Repeat password</string>
    <string name="register_first_name">First title</string>
    <string name="register_surname">Surname</string>
    <string name="item_amount">Amount</string>
    <string name="item_title">Title</string>


    <!-- Button Strings -->
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="register_account">REGISTER ACCOUNT</string>
    <string name="btn_add_exp_inc">ADD</string>

    <!-- TextView Strings -->
    <string name="tv_forgot_password">Forgot password?</string>
    <string name="tv_fragment_type_expenditure">Add expenditure</string>
    <string name="tv_fragment_type_income">Add income</string>
    <string name="tv_total_income">Total income</string>
    <string name="tv_total_expenditure">Total expenditure</string>
    <string name="tv_currency"> kr</string>
    <string name="tv_welcome">Welcome</string>
    <string name="tv_welcome_message_not_signedin">Login or register</string>
    <string name="tv_welcome_message_signedin">Signed in as: </string>


    <!-- Category Strings -->
    <string-array name="category_income">
        <item>Salary</item>
        <item>Other</item>
    </string-array>

    <string-array name="category_expenditure">
        <item>Accomodation</item>
        <item>Food</item>
        <item>Leisure</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>

    <string-array name="category_sort">
        <item>Date descending</item>
        <item>Date ascending</item>
        <item>Amount descending</item>
        <item>Amount ascending</item>
        <item>Category</item>
    </string-array>


</resources>
